# ai-weekly-digest

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  implementation_plan.md  latest_digest.md  pyproject.toml
.github/workflows/: weekly_digest.yml
data/: eda_papers.csv
docs/implementation_plans/: phase_01_to_11_mvp.md  phase_12_prediction_scoring.md
eda/notebooks/: 03_further_fe_clean.ipynb  04_two_stage_pipeline.ipynb  citation_prediction_eda.ipynb  citation_prediction_eda_refined.ipynb  semantic_embedding.ipynb  semantic_embedding_clean.ipynb  two_stage_pipeline.ipynb
eda/notebooks/tests/: test_llm_scoring.py
eda/scripts/: build_dataset.py  create_eda_notebook.py  merge_chunks.py
migrations/: env.py
migrations/versions/: d2f9333db4f1_create_initial_tables.py
output/digests/: digest_2026-01-31_to_2026-02-07.md
src/: __init__.py  config.py  database.py  main.py
src/models/: __init__.py  base.py  digest.py  paper.py  run.py  score.py
src/repositories/: paper_repo.py
src/schemas/: paper.py
src/scripts/: check_db_data.py  debug_scholar.py  fetch_papers.py  generate_digest.py  rank_papers.py  send_failure_notification.py  send_notification.py
src/services/: __init__.py
src/services/arxiv/: __init__.py  client.py  parser.py
src/services/llm/: client.py  prompts.py  summarizer.py
src/services/notify/: __init__.py  email.py  telegram.py
src/services/ranking/: features.py  llm_scorer.py  scorer.py
src/services/ranking/models/: preprocessing.pkl  stage1_config.pkl  stage1_recall_model.pkl  stage2_config.pkl  stage2_precision_model.pkl
tests/: test_arxiv.py  test_weekly_fetch.py
