[project]
name = "weekly-ai-digest"
version = "0.1.0"
description = "Weekly AI Papers Digest from arXiv"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "feedparser>=6.0.0",
    "openai>=1.12.0",
    "ollama>=0.1.0",
    "python-telegram-bot>=21.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "seaborn>=0.13.0",
    "semanticscholar>=0.6.0",
    "tenacity>=8.2.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",
    "markdown>=3.5.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[dependency-groups]
dev = [
    "fastparquet>=2025.12.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "nest-asyncio>=1.6.0",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.2",
    "torch>=2.10.0",
    "xgboost>=3.1.3",
]
